objects/sharinpix__SharinPixSyncSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>sharinpix__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sharinpix__ParentFieldName__c</fullName>
        <label>Parent Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__ParentObjectName__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SharinPix Sync Setting</label>
    <pluralLabel>SharinPix Sync Settings</pluralLabel>
</CustomObject>